# Hotel-Reservation-ML-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/0/1db101d1991c497299a2a56257d18c14/: meta.yaml
mlruns/0/1db101d1991c497299a2a56257d18c14/metrics/: accuracy  f1  precison  recall
mlruns/0/1db101d1991c497299a2a56257d18c14/tags/: mlflow.runName
mlruns/0/64e760fb75574347b1245b929df9edba/: meta.yaml
mlruns/0/64e760fb75574347b1245b929df9edba/metrics/: accuracy  f1  precison  recall
mlruns/0/64e760fb75574347b1245b929df9edba/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/d4515ff1fe234c3eb349cc1f8de2d1c6/: meta.yaml
mlruns/0/d4515ff1fe234c3eb349cc1f8de2d1c6/metrics/: accuracy  f1  precison  recall
mlruns/0/d4515ff1fe234c3eb349cc1f8de2d1c6/tags/: mlflow.runName  mlflow.source.git.commit
notebook/: notebook.ipynb
src/config/: model_params.py  paths_config.py
src/hotelres/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
src/hotelres/config/: config.yaml  paths_config.py
src/hotelres/utils/: commonfunctions.py
src/pipeline/: training_pipeline.py
src/utils/: commonfunctions.py
static/: style.css
